--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <h1>Astronauts</h1>
     <div id="container">
         <!-- List of astronauts will be added here dynamically -->
-    </div>
+      <!-- <div class=""astronaut">
+        <div class="bio">
+          <h3> Name: </h3>
+          <ul>
+            <li>Hours in space: </li>
+            <li>Active: </li>
+            <li>Skills:  </li>
+          </ul>
+        </div> -->
+        <!-- <img class> -->
+      </div>
   </body>
 </html>
